--- a/requirements_webui.txt
+++ b/requirements_webui.txt
@@ -35,7 +35,7 @@ scikit-image==0.19.3
 protobuf==3.20.2
 basicsr==1.4.2
 gfpgan==1.3.8
-matplotlib==3.7.5
+matplotlib
 
 # MuseTalk related libraries
 diffusers==0.27.2
@@ -49,10 +49,10 @@ transformers==4.39.2
 # mim install "mmdet>=3.1.0" 
 # mim install "mmpose>=1.1.0" 
 
-# # PaddleTTS related libraries
-# paddlepaddle==2.5.2
-# paddlespeech==1.4.1
-# opencc==1.1.1
+# PaddleTTS related libraries
+paddlepaddle
+paddlespeech
+opencc
 
 # ASR (Automatic Speech Recognition) related libraries
 openai
@@ -91,7 +91,6 @@ psutil
 jieba_fast
 jieba
 LangSegment
-
 
 # CosyVoice  related libraries
 conformer==0.3.2
